--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    
+    <title>Marilyne Rios Portfolio</title>
+    <!-- Description de la page -->
+    <meta name="description" content="Portfolio de Marilyne Rios, développeuse web spécialisée en React. Découvrez mes projets, mes compétences et mon parcours.">
+    <!-- Mots-clés pour les moteurs de recherche -->
+    <meta name="keywords" content="Marilyne Rios, Portfolio, Développeuse Web, React, Projets">
+    
+    <meta name="author" content="Marilyne Rios">
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   </head>
   <body>
     <div id="root"></div>
