--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="keywords" content="Marilyne Rios, Portfolio, Développeuse Web, React, Projets">
     
     <meta name="author" content="Marilyne Rios">
-    <link rel="icon" type="image/svg+xml" href="/logo.png" />
+    <link rel="icon" type="image/svg+xml" href="/logoDevPink.png" />
   </head>
   <body>
     <div id="root"></div>
